--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ footer .marginFooter .iconosFooter {
   justify-content: center;
 }
 footer .marginFooter .iconosFooter .icono:hover {
-  transform: scale(108%);
+  transform: scale(109%);
   transition: all 0.2s;
 }
 
@@ -134,6 +134,7 @@ div .fila {
   padding-bottom: 3%;
 }
 .contenedorProyectos .previewProyectos {
+  filter: grayscale(10%);
   position: relative;
   overflow: hidden;
   padding-top: 30%;
@@ -176,11 +177,59 @@ div .fila {
   height: 90%;
 }
 
+.mainForm .contactanos {
+  text-align: center;
+  color: rgb(184, 34, 84);
+  padding-top: 22px;
+}
+.mainForm .formulario {
+  background: rgba(36, 35, 35, 0.4);
+  width: 70%;
+  height: 472px;
+  margin: auto;
+  padding: 5px 35px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-radius: 3px;
+}
+.mainForm .formulario .elementosFormulario {
+  padding-top: 8px;
+}
+.mainForm .formulario .elementosFormulario .formLabel {
+  display: block;
+  position: relative;
+  padding-top: 5px;
+  color: rgb(173, 43, 87);
+}
+.mainForm .formulario .elementosFormulario .formInput {
+  width: 100%;
+  outline: none;
+  border: none;
+  padding: 5px;
+  font-size: medium;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #f1f1f1;
+}
+.mainForm .formulario .elementosFormulario .areaTexto {
+  width: 100%;
+  outline: none;
+  padding: 5px;
+  resize: none;
+}
+.mainForm .formulario .elementosFormulario .formBoton {
+  width: 100%;
+  background: rgb(204, 39, 80);
+  outline: none;
+  border: none;
+}
+.mainForm .formulario .elementosFormulario .formBoton:hover {
+  background: rgb(243, 13, 70);
+  transform: scale(1.004);
+}
+
 .sectionContacto {
   text-align: center;
-}
-.sectionContacto .contactanos {
-  color: rgb(209, 30, 90);
 }
 .sectionContacto .mapa {
   filter: grayscale(100%);
@@ -219,6 +268,13 @@ body {
 h1,
 p {
     text-align: center;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  h4,
+h5 {
+    margin-top: 20px;
   }
 }
 
