--- a/scss/base/_estilosGenerales.scss
+++ b/scss/base/_estilosGenerales.scss
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    
 }
 
 body{
@@ -21,4 +22,11 @@ p{
 @media only screen and (max-width:450px){
       text-align: center;
     }
+}
+
+h4,
+h5{
+    @media only screen and (max-width:768px){
+        margin-top: 20px;
+    } 
 }
