--- a/scss/components/_proyectos.scss
+++ b/scss/components/_proyectos.scss
@@ -6,6 +6,7 @@
             padding-top: 3%;
             padding-bottom: 3%;
         .previewProyectos{
+                filter:grayscale(10%);
                 position: relative;
                 overflow: hidden;
                 padding-top: 30%;
